fix alignment between notification and avatar menu, re #7916

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -142,7 +142,7 @@
 
 .header_avatar_container, #header_avatar_menu .action-menu-icon {
     z-index: 1003;
-    margin: 3.5px 0px 0px 0px;
+    margin: 5px 0px 0px 0px;
 }
 
 .header_avatar_container {
